--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -1,10 +1,10 @@
-.container{
+.container {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.wrapper{
+.wrapper {
   width: 500px;
   background-color: var(--bgSoft);
   padding: 50px;
@@ -15,7 +15,7 @@
   border-radius: 5px;
 }
 
-.github{
+.github {
   width: 100%;
   padding: 20px;
   cursor: pointer;
@@ -24,4 +24,10 @@
   font-weight: bold;
   border: none;
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    gap: 20px;
+  }
 }
