--- a/src/components/postCard/postCard.module.css
+++ b/src/components/postCard/postCard.module.css
@@ -1,43 +1,51 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
 }
 
-.top{
+.top {
   display: flex;
 }
 
-.imgContainer{
-  width: 90%;
+.imgContainer {
+  flex: 5;
   height: 400px;
   position: relative;
 }
 
-.img{
+.img {
   object-fit: cover;
 }
 
-.date{
+.date {
+  flex: 1;
   font-size: 12px;
-  transform: rotate(270deg);
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title{
+.spanDate {
+  display: inline-block;
+  width: max-content;
+  transform: rotate(270deg);
+}
+
+.title {
   width: 90%;
   font-size: 24px;
   margin-bottom: 20px;
 }
 
-.desc{
+.desc {
   width: 90%;
   margin-bottom: 20px;
   font-weight: 300;
   color: gray;
 }
 
-.link{
+.link {
   text-decoration: underline;
 }
