style: change the loading page style ti a spinner loader instead of a paragraph

--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -37,5 +37,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    z-index: 999;
+    background-color: var(--bg);
   }
 }
