--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -9,12 +9,20 @@
 }
 
 @media screen and (max-width: 1280px) {
+  .container {
+    justify-content: space-between;
+  }
+
   .post {
     width: 45%;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    justify-content: center;
+  }
+
   .post {
     width: 100%;
   }
